# Starship

./: .gitignore  .gitmodules  CMakeLists.txt  CompileLinux-Osx.sh  CompileWindows.bat  Credits.md  LICENSE  README.md  clean.bat  clean.sh  compile.bat
.github/workflows/: build.yml
docs/: compile-linux.md  compile-macos.md  compile-windows.md  license.md
src/: bullet.cpp  bullet.hpp  embedRes.cpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  main.cpp  main.hpp  movement.cpp  movement.hpp  player_rotation.cpp  player_rotation.hpp
src/embededRes/: badguy.hpp  iconLogo.hpp  player.h  speedplayer.hpp
tests/: CMakeLists.txt
